auth working with MSAL
